added ruby gem
